--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,14 @@ services:
       POSTGRES_USER: docker
     networks:
       - mynetwork
+  cronjob:
+    image: knockknock-cronjob
+    depends_on:
+      - backend
+    environment:
+      RANGE: 192.168.178.0/24
+    networks:
+      - mynetwork
   postgresql:
     image: postgres:11.4-alpine
     ports:
