--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - backend
     environment:
       BACKEND_HOST: "knockknock_backend_1:8080"
+      FREQUENCY_MINUTES: 5
       PIHOLE_HOST: "192.168.178.23"
       PIHOLE_TOKEN: "ce66bcd164836d448b3e1f1fbb93552c99ff2b8526d6dc3835153ad679061d73"
     networks:
