--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -7,6 +7,7 @@ verify_ssl = true
 
 [packages]
 aiohttp = "~=3.5.4"
+aiohttp-swagger = "~=1.0.9"
 psycopg2-binary = "~=2.8.3"
 sqlalchemy = "~=1.2.12"
 
